versions/38.33.4/markdown-docs/components/file/examples/readme.md
# limel-example-file-menu-items



<!-- Auto Generated Below -->


## Overview

Custom menu items

By providing custom menu items, you can add additional actions.

## Dependencies

### Depends on

- [limel-file](..)
- [limel-example-value](../../../examples)

### Graph
```mermaid
graph TD;
  limel-example-file-menu-items --> limel-file
  limel-example-file-menu-items --> limel-example-value
  limel-file --> limel-file-dropzone
  limel-file --> limel-chip-set
  limel-file --> limel-file-input
  limel-file-dropzone --> limel-icon
  limel-chip-set --> limel-helper-line
  limel-chip-set --> limel-notched-outline
  limel-chip-set --> limel-chip
  limel-chip-set --> limel-icon
  limel-chip --> limel-icon
  limel-chip --> limel-badge
  limel-chip --> limel-menu
  limel-chip --> limel-linear-progress
  limel-menu --> limel-spinner
  limel-menu --> limel-breadcrumbs
  limel-menu --> limel-input-field
  limel-menu --> limel-menu-list
  limel-menu --> limel-badge
  limel-menu --> limel-portal
  limel-menu --> limel-menu-surface
  limel-breadcrumbs --> limel-icon
  limel-breadcrumbs --> limel-tooltip
  limel-tooltip --> limel-portal
  limel-tooltip --> limel-tooltip-content
  limel-input-field --> limel-helper-line
  limel-input-field --> limel-icon
  limel-input-field --> limel-portal
  limel-input-field --> limel-menu-surface
  limel-input-field --> limel-list
  limel-input-field --> limel-notched-outline
  style limel-example-file-menu-items fill:#f9f,stroke:#333,stroke-width:4px
```

----------------------------------------------

*Built with [StencilJS](https://stenciljs.com/)*
